Fixed the random walk direction bias, made bots only update when visible, fixed bot-memory bugs with the seek task, fixed multiple items being dropped by a single collection task, removed the step task (redundant), improved the task-queue handling so subsequent tasks can inherit the end-state from the previously executed task (i.e. solution passing), added a pumpkin sprite, added some helper functions for determining ranges, added inventory merging functions for better item stack handling, removed other redundant tasks, lots of bug-squashing

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,9 +14,9 @@ Size=345,111
 Collapsed=1
 
 [Window][Territory Controller]
-Pos=45,36
-Size=498,712
-Collapsed=1
+Pos=66,-1
+Size=377,734
+Collapsed=0
 
 [Window][Style Editor]
 Pos=302,-22
