--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=345,111
 Collapsed=1
 
 [Window][Territory Controller]
-Pos=10,-4
-Size=462,791
+Pos=29,48
+Size=462,701
 Collapsed=0
 
 [Window][Style Editor]
